--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ colorama==0.4.6
 coloredlogs==15.0.1
 dataclasses-json==0.6.4
 Deprecated==1.2.14
+distro==1.9.0
 fastapi==0.110.0
 filelock==3.13.1
 flatbuffers==24.3.7
@@ -35,7 +36,9 @@ greenlet==3.0.3
 grpcio==1.62.1
 grpcio-status==1.62.1
 h11==0.14.0
+httpcore==1.0.4
 httptools==0.6.1
+httpx==0.27.0
 huggingface-hub==0.21.4
 humanfriendly==10.0
 idna==3.6
@@ -51,6 +54,7 @@ langchain==0.1.12
 langchain-community==0.0.28
 langchain-core==0.1.31
 langchain-google-genai==0.0.9
+langchain-openai==0.0.8
 langchain-text-splitters==0.0.1
 langsmith==0.1.24
 markdown-it-py==3.0.0
@@ -65,6 +69,7 @@ mypy-extensions==1.0.0
 numpy==1.26.4
 oauthlib==3.2.2
 onnxruntime==1.17.1
+openai==1.14.0
 opentelemetry-api==1.23.0
 opentelemetry-exporter-otlp-proto-common==1.23.0
 opentelemetry-exporter-otlp-proto-grpc==1.23.0
@@ -99,6 +104,7 @@ python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 referencing==0.33.0
+regex==2023.12.25
 requests==2.31.0
 requests-oauthlib==1.4.0
 rich==13.7.1
@@ -112,6 +118,7 @@ starlette==0.36.3
 streamlit==1.32.1
 sympy==1.12
 tenacity==8.2.3
+tiktoken==0.6.0
 tokenizers==0.15.2
 toml==0.10.2
 toolz==0.12.1
@@ -130,4 +137,3 @@ websockets==12.0
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.18.0
-pysqlite3-binary
